--- a/About.html
+++ b/About.html
@@ -18,6 +18,7 @@
       <a href = '#'> About | </a>
       <a href = '#'> Contact | </a>
       <a href = '#'> Donations | </a>
+      <a href = '#'> Patreon | </a>
     </nav>
     <h1>Everything About Us</h1>
     <p>This is first paragraph.</p>
